--- a/MusicDecrypto.csproj
+++ b/MusicDecrypto.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CommandLineParser" Version="2.7.82" />
     <PackageReference Include="Microsoft.Packaging.Tools.Trimming" Version="1.1.0-preview1-26619-01" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NLog" Version="4.6.8" />
     <PackageReference Include="TagLibSharp" Version="2.2.0" />
   </ItemGroup>
 
