--- a/MusicDecrypto.csproj
+++ b/MusicDecrypto.csproj
@@ -4,15 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
-    <Version>2.1.0</Version>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.7.82" />
-    <PackageReference Include="Microsoft.Packaging.Tools.Trimming" Version="1.1.0-preview1-26619-01" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="NLog" Version="4.6.8" />
-    <PackageReference Include="TagLibSharp" Version="2.2.0" />
+    <PackageReference Include="CommandLineParser" Version="2.*" />
+    <PackageReference Include="Microsoft.Packaging.Tools.Trimming" Version="1.1.0-prerelease.*" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.*" />
+    <PackageReference Include="NLog" Version="4.*" />
+    <PackageReference Include="TagLibSharp" Version="2.*" />
   </ItemGroup>
 
 </Project>
