--- a/MusicDecrypto.csproj
+++ b/MusicDecrypto.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <TrimUnusedDependencies>true</TrimUnusedDependencies>
+    <TargetFramework>net5.0</TargetFramework>
+    <PublishTrimmed>true</PublishTrimmed>
+    <TrimMode>CopyUsed</TrimMode>
     <Version>3.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.*" />
-    <PackageReference Include="Microsoft.Packaging.Tools.Trimming" Version="1.1.0-prerelease.*" />
     <PackageReference Include="Newtonsoft.Json" Version="12.*" />
     <PackageReference Include="NLog" Version="4.*" />
     <PackageReference Include="TagLibSharp" Version="2.*" />
