--- a/MusicDecrypto.csproj
+++ b/MusicDecrypto.csproj
@@ -3,15 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <PublishTrimmed>true</PublishTrimmed>
-    <TrimMode>CopyUsed</TrimMode>
     <Version>3.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.*" />
     <PackageReference Include="Newtonsoft.Json" Version="12.*" />
-    <PackageReference Include="NLog" Version="4.*" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta*" />
     <PackageReference Include="TagLibSharp" Version="2.*" />
   </ItemGroup>
 
