--- a/MusicDecrypto.csproj
+++ b/MusicDecrypto.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\KugouMask.br" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\KugouMask.br" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Mono.Options" Version="6.*" />
     <PackageReference Include="Newtonsoft.Json" Version="12.*" />
     <PackageReference Include="TagLibSharp" Version="2.*" />
