--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,10 @@ jobs:
         dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false  
     - name: Extract tag name
       id: tag
+      if: startsWith(github.ref, 'refs/tags/')
       uses: olegtarasov/get-tag@v2.1.1
     - name: Pack
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         rm ./MusicDecrypto.Commandline/bin/Release/net5.0/publish/*.pdb
         tar czvf musicdecrypto-net5.0-$GIT_TAG_NAME.tar.gz -C ./MusicDecrypto.Commandline/bin/Release/net5.0/publish/ .
@@ -73,8 +75,10 @@ jobs:
         dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false
     - name: Extract tag name
       id: tag
+      if: startsWith(github.ref, 'refs/tags/')
       uses: olegtarasov/get-tag@v2.1.1
     - name: Pack
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         7z a musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z .\MusicDecrypto.Commandline\bin\Release\net5.0\win-x64\publish\musicdecrypto.exe
         (Get-FileHash musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z SHA256).Hash + " musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z" > musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z.sha256
