--- a/MusicDecrypto.Library/MusicDecrypto.Library.csproj
+++ b/MusicDecrypto.Library/MusicDecrypto.Library.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.*" />
+    <PackageReference Include="System.Text.Json" Version="5.*" />
     <PackageReference Include="TagLibSharp" Version="2.*" />
   </ItemGroup>
 
