--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,25 +14,26 @@ concurrency:
 jobs:
   linux:
     runs-on: ubuntu-18.04
-    container: mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-18.04-cross-arm64-20210727130204-b2c2436 # https://github.com/dotnet/versions/blob/main/build-info/docker/image-info.dotnet-dotnet-buildtools-prereqs-docker-main.json
+    container: mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-18.04-cross-arm64-20220427171722-6e40d49 # https://github.com/dotnet/versions/blob/main/build-info/docker/image-info.dotnet-dotnet-buildtools-prereqs-docker-main.json
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '5.0.x'
+        dotnet-version: '6.0.x'
     - name: Publish
       run: |
-        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release
-    - name: Add packages
+        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -o ./generic
+        dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -o ./generic
+        dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r linux-x64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-x64
+        dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r linux-arm64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-arm64
+    - name: Publish with NativeAOT
       run: |
-        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 6.0.0-*
-        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.linux-x64.Microsoft.DotNet.ILCompiler -v 6.0.0-*
-    - name: Publish
-      run: |
-        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-x64 -p:CppCompilerAndLinker=clang-9 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false
-        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false
+        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 7.0.0-*
+        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-x64 --sc -p:CppCompilerAndLinker=clang-9 -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-x64
+        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.linux-x64.Microsoft.DotNet.ILCompiler -v 7.0.0-*
+        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 --sc -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-arm64
     - name: Extract tag name
       id: tag
       if: startsWith(github.ref, 'refs/tags/')
@@ -40,39 +41,48 @@ jobs:
     - name: Pack
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        rm ./MusicDecrypto.Commandline/bin/Release/net5.0/publish/*.pdb
-        tar czvf musicdecrypto-net5.0-$GIT_TAG_NAME.tar.gz -C ./MusicDecrypto.Commandline/bin/Release/net5.0/publish/ .
-        sha256sum musicdecrypto-net5.0-$GIT_TAG_NAME.tar.gz > musicdecrypto-net5.0-$GIT_TAG_NAME.tar.gz.sha256
-        strip ./MusicDecrypto.Commandline/bin/Release/net5.0/linux-x64/publish/musicdecrypto
-        tar czvf musicdecrypto-linux-x64-$GIT_TAG_NAME.tar.gz -C ./MusicDecrypto.Commandline/bin/Release/net5.0/linux-x64/publish/ musicdecrypto
-        sha256sum musicdecrypto-linux-x64-$GIT_TAG_NAME.tar.gz > musicdecrypto-linux-x64-$GIT_TAG_NAME.tar.gz.sha256
-        aarch64-linux-gnu-strip ./MusicDecrypto.Commandline/bin/Release/net5.0/linux-arm64/publish/musicdecrypto
-        tar czvf musicdecrypto-linux-arm64-$GIT_TAG_NAME.tar.gz -C ./MusicDecrypto.Commandline/bin/Release/net5.0/linux-arm64/publish/ musicdecrypto
-        sha256sum musicdecrypto-linux-arm64-$GIT_TAG_NAME.tar.gz > musicdecrypto-linux-arm64-$GIT_TAG_NAME.tar.gz.sha256
+        tar cavf musicdecrypto-all-$GIT_TAG_NAME-net6.0-noarch.tar.xz -C ./generic/ $(cd ./generic/ && echo *)
+        sha256sum musicdecrypto-all-$GIT_TAG_NAME-net6.0-noarch.tar.xz > musicdecrypto-all-$GIT_TAG_NAME-net6.0-noarch.tar.xz.sha256
+        strip ./cli-x64/musicdecrypto
+        aarch64-linux-gnu-strip ./cli-arm64/musicdecrypto
+        tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-x64.tar.xz -C ./gui-x64/ $(cd ./gui-x64/ && echo *)
+        tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-arm64.tar.xz -C ./gui-arm64/ $(cd ./gui-arm64/ && echo *)
+        tar cavf musicdecrypto-cli-$GIT_TAG_NAME-linux-x64.tar.xz -C ./cli-x64/ musicdecrypto
+        tar cavf musicdecrypto-cli-$GIT_TAG_NAME-linux-arm64.tar.xz -C ./cli-arm64/ musicdecrypto
+        sha256sum musicdecrypto-gui-$GIT_TAG_NAME-linux-x64.tar.xz > musicdecrypto-gui-$GIT_TAG_NAME-linux-x64.tar.xz.sha256
+        sha256sum musicdecrypto-gui-$GIT_TAG_NAME-linux-arm64.tar.xz > musicdecrypto-gui-$GIT_TAG_NAME-linux-arm64.tar.xz.sha256
+        sha256sum musicdecrypto-cli-$GIT_TAG_NAME-linux-x64.tar.xz > musicdecrypto-cli-$GIT_TAG_NAME-linux-x64.tar.xz.sha256
+        sha256sum musicdecrypto-cli-$GIT_TAG_NAME-linux-arm64.tar.xz > musicdecrypto-cli-$GIT_TAG_NAME-linux-arm64.tar.xz.sha256
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          musicdecrypto-net5.0-${{ steps.tag.outputs.tag }}.tar.gz
-          musicdecrypto-net5.0-${{ steps.tag.outputs.tag }}.tar.gz.sha256
-          musicdecrypto-linux-x64-${{ steps.tag.outputs.tag }}.tar.gz
-          musicdecrypto-linux-x64-${{ steps.tag.outputs.tag }}.tar.gz.sha256
-          musicdecrypto-linux-arm64-${{ steps.tag.outputs.tag }}.tar.gz
-          musicdecrypto-linux-arm64-${{ steps.tag.outputs.tag }}.tar.gz.sha256
+          musicdecrypto-all-${{ steps.tag.outputs.tag }}-net6.0-noarch.tar.xz
+          musicdecrypto-all-${{ steps.tag.outputs.tag }}-net6.0-noarch.tar.xz.sha256
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz.sha256
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz.sha256
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz.sha256
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz.sha256
   win:
     runs-on: windows-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Add packages
-      run: |
-        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 6.0.0-*
-        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.win-x64.Microsoft.DotNet.ILCompiler -v 6.0.0-*
     - name: Publish
       run: |
-        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-x64 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false
-        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateCompleteTypeMetadata=false -p:IlcGenerateStackTraceData=false
+        dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r win-x64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-x64
+        dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r win-arm64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-arm64
+    - name: Publish with NativeAOT
+      run: |
+        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 7.0.0-*
+        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-x64 --sc -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-x64
+        dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.win-x64.Microsoft.DotNet.ILCompiler -v 7.0.0-*
+        dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-arm64 --sc -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-arm64
     - name: Extract tag name
       id: tag
       if: startsWith(github.ref, 'refs/tags/')
@@ -80,16 +90,25 @@ jobs:
     - name: Pack
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        7z a musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z .\MusicDecrypto.Commandline\bin\Release\net5.0\win-x64\publish\musicdecrypto.exe
-        (Get-FileHash musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z SHA256).Hash + " musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z" > musicdecrypto-win-x64-$env:GIT_TAG_NAME.7z.sha256
-        7z a musicdecrypto-win-arm64-$env:GIT_TAG_NAME.7z .\MusicDecrypto.Commandline\bin\Release\net5.0\win-arm64\publish\musicdecrypto.exe
-        (Get-FileHash musicdecrypto-win-arm64-$env:GIT_TAG_NAME.7z SHA256).Hash + " musicdecrypto-win-arm64-$env:GIT_TAG_NAME.7z" > musicdecrypto-win-arm64-$env:GIT_TAG_NAME.7z.sha256
+        7z a musicdecrypto-gui-$env:GIT_TAG_NAME-win-x64.7z .\gui-x64\*
+        7z a musicdecrypto-gui-$env:GIT_TAG_NAME-win-arm64.7z .\gui-arm64\*
+        7z a musicdecrypto-cli-$env:GIT_TAG_NAME-win-x64.7z .\cli-x64\musicdecrypto.exe
+        7z a musicdecrypto-cli-$env:GIT_TAG_NAME-win-arm64.7z .\cli-arm64\musicdecrypto.exe
+        (Get-FileHash musicdecrypto-gui-$env:GIT_TAG_NAME-win-x64.7z SHA256).Hash + " musicdecrypto-gui-$env:GIT_TAG_NAME-win-x64.7z" > musicdecrypto-gui-$env:GIT_TAG_NAME-win-x64.7z.sha256
+        (Get-FileHash musicdecrypto-gui-$env:GIT_TAG_NAME-win-arm64.7z SHA256).Hash + " musicdecrypto-gui-$env:GIT_TAG_NAME-win-arm64.7z" > musicdecrypto-gui-$env:GIT_TAG_NAME-win-arm64.7z.sha256
+        (Get-FileHash musicdecrypto-cli-$env:GIT_TAG_NAME-win-x64.7z SHA256).Hash + " musicdecrypto-cli-$env:GIT_TAG_NAME-win-x64.7z" > musicdecrypto-cli-$env:GIT_TAG_NAME-win-x64.7z.sha256
+        (Get-FileHash musicdecrypto-cli-$env:GIT_TAG_NAME-win-arm64.7z SHA256).Hash + " musicdecrypto-cli-$env:GIT_TAG_NAME-win-arm64.7z" > musicdecrypto-cli-$env:GIT_TAG_NAME-win-arm64.7z.sha256
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          musicdecrypto-win-x64-${{ steps.tag.outputs.tag }}.7z
-          musicdecrypto-win-x64-${{ steps.tag.outputs.tag }}.7z.sha256
-          musicdecrypto-win-arm64-${{ steps.tag.outputs.tag }}.7z
-          musicdecrypto-win-arm64-${{ steps.tag.outputs.tag }}.7z.sha256
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-win-x64.7z
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-win-x64.7z.sha256
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-win-arm64.7z
+          musicdecrypto-gui-${{ steps.tag.outputs.tag }}-win-arm64.7z.sha256
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-win-x64.7z
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-win-x64.7z.sha256
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-win-arm64.7z
+          musicdecrypto-cli-${{ steps.tag.outputs.tag }}-win-arm64.7z.sha256
+        body: '*x64 variant of CLI was built targeting x86-64-v3 (AVX2)*'
