--- a/MusicDecrypto.Library/MusicDecrypto.Library.csproj
+++ b/MusicDecrypto.Library/MusicDecrypto.Library.csproj
@@ -1,19 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>libmusicdecrypto</AssemblyName>
-    <Version>3.3.1</Version>
+    <Version>2.0.0</Version>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>None</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Properties\KugouMask.br" />
-    <EmbeddedResource Include="Properties\KugouMask.br" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="5.*" />
-    <PackageReference Include="TagLibSharp" Version="2.*" />
+    <PackageReference Include="NativeMemoryArray" Version="1.2.*" />
+    <PackageReference Include="System.Text.Json" Version="6.0.*" />
+    <PackageReference Include="TagLibSharp" Version="2.2.*" />
   </ItemGroup>
 
 </Project>
