--- a/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
+++ b/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	
     <PropertyGroup>
       <TargetFramework>net6.0</TargetFramework>
       <AssemblyName>musicdecrypto-avalonia</AssemblyName>
       <OutputType>WinExe</OutputType>
-      <VersionPrefix>2.0.0</VersionPrefix>
+      <VersionPrefix>2.0.1</VersionPrefix>
       <Nullable>enable</Nullable>
       <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     </PropertyGroup>
@@ -18,7 +18,7 @@
       <PackageReference Include="Avalonia.Desktop" Version="0.10.*" />
       <PackageReference Include="Avalonia.Diagnostics" Version="0.10.*" Condition=" '$(Configuration)' == 'Debug' " />
       <PackageReference Include="ByteSize" Version="2.1.*" />
-      <PackageReference Include="FluentAvaloniaUI" Version="1.3.*" />
+      <PackageReference Include="FluentAvaloniaUI" Version="1.4.*" />
       <PackageReference Include="FluentIcons.Avalonia" Version="1.1.*" />
     </ItemGroup>
   
