Support Tencent `EncV2`

--- a/MusicDecrypto.Library.Tests/MusicDecrypto.Library.Tests.csproj
+++ b/MusicDecrypto.Library.Tests/MusicDecrypto.Library.Tests.csproj
@@ -8,52 +8,56 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="DataSets\mflac0_rc4.bin" />
-    <None Remove="DataSets\mflac0_rc4_enc.bin" />
-    <None Remove="DataSets\mflac0_rc4_key.bin" />
-    <None Remove="DataSets\mflac0_rc4_key_enc.bin" />
-    <None Remove="DataSets\mflac0_rc4_suffix.bin" />
-    <None Remove="DataSets\mflac_map.bin" />
-    <None Remove="DataSets\mflac_map_enc.bin" />
-    <None Remove="DataSets\mflac_map_key.bin" />
-    <None Remove="DataSets\mflac_map_key_enc.bin" />
-    <None Remove="DataSets\mflac_map_suffix.bin" />
-    <None Remove="DataSets\mflac_rc4.bin" />
-    <None Remove="DataSets\mflac_rc4_enc.bin" />
-    <None Remove="DataSets\mflac_rc4_key.bin" />
-    <None Remove="DataSets\mflac_rc4_key_enc.bin" />
-    <None Remove="DataSets\mflac_rc4_suffix.bin" />
-    <None Remove="DataSets\mgg_map.bin" />
-    <None Remove="DataSets\mgg_map_enc.bin" />
-    <None Remove="DataSets\mgg_map_key.bin" />
-    <None Remove="DataSets\mgg_map_key_enc.bin" />
-    <None Remove="DataSets\mgg_map_suffix.bin" />
-    <None Remove="DataSets\qmc0_static.bin" />
-    <None Remove="DataSets\qmc0_static_enc.bin" />
-    <None Remove="DataSets\qmc0_static_suffix.bin" />
-    <EmbeddedResource Include="DataSets\mflac0_rc4.bin" />
-    <EmbeddedResource Include="DataSets\mflac0_rc4_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac0_rc4_key.bin" />
-    <EmbeddedResource Include="DataSets\mflac0_rc4_key_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac0_rc4_suffix.bin" />
-    <EmbeddedResource Include="DataSets\mflac_map.bin" />
-    <EmbeddedResource Include="DataSets\mflac_map_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac_map_key.bin" />
-    <EmbeddedResource Include="DataSets\mflac_map_key_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac_map_suffix.bin" />
-    <EmbeddedResource Include="DataSets\mflac_rc4.bin" />
-    <EmbeddedResource Include="DataSets\mflac_rc4_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac_rc4_key.bin" />
-    <EmbeddedResource Include="DataSets\mflac_rc4_key_enc.bin" />
-    <EmbeddedResource Include="DataSets\mflac_rc4_suffix.bin" />
-    <EmbeddedResource Include="DataSets\mgg_map.bin" />
-    <EmbeddedResource Include="DataSets\mgg_map_enc.bin" />
-    <EmbeddedResource Include="DataSets\mgg_map_key.bin" />
-    <EmbeddedResource Include="DataSets\mgg_map_key_enc.bin" />
-    <EmbeddedResource Include="DataSets\mgg_map_suffix.bin" />
-    <EmbeddedResource Include="DataSets\qmc0_static.bin" />
-    <EmbeddedResource Include="DataSets\qmc0_static_enc.bin" />
-    <EmbeddedResource Include="DataSets\qmc0_static_suffix.bin" />
+    <None Remove="DataSets\mflac-map.payload" />
+    <None Remove="DataSets\mflac-map.payload.enc" />
+    <None Remove="DataSets\mflac-map.key" />
+    <None Remove="DataSets\mflac-map.key.enc" />
+    <None Remove="DataSets\mflac-map.tail" />
+    <None Remove="DataSets\mflac_v2-map.key" />
+    <None Remove="DataSets\mflac_v2-map.key.enc" />
+    <None Remove="DataSets\mflac-rc4.payload" />
+    <None Remove="DataSets\mflac-rc4.payload.enc" />
+    <None Remove="DataSets\mflac-rc4.key" />
+    <None Remove="DataSets\mflac-rc4.key.enc" />
+    <None Remove="DataSets\mflac-rc4.tail" />
+    <None Remove="DataSets\mflac0-rc4.payload" />
+    <None Remove="DataSets\mflac0-rc4.payload.enc" />
+    <None Remove="DataSets\mflac0-rc4.key" />
+    <None Remove="DataSets\mflac0-rc4.key.enc" />
+    <None Remove="DataSets\mflac0-rc4.tail" />
+    <None Remove="DataSets\mgg-map.payload" />
+    <None Remove="DataSets\mgg-map.payload.enc" />
+    <None Remove="DataSets\mgg-map.key" />
+    <None Remove="DataSets\mgg-map.key.enc" />
+    <None Remove="DataSets\mgg-map.tail" />
+    <None Remove="DataSets\qmc0-static.payload" />
+    <None Remove="DataSets\qmc0-static.payload.enc" />
+    <None Remove="DataSets\qmc0-static.key" />
+    <EmbeddedResource Include="DataSets\mflac-map.payload" />
+    <EmbeddedResource Include="DataSets\mflac-map.payload.enc" />
+    <EmbeddedResource Include="DataSets\mflac-map.key" />
+    <EmbeddedResource Include="DataSets\mflac-map.key.enc" />
+    <EmbeddedResource Include="DataSets\mflac-map.tail" />
+    <EmbeddedResource Include="DataSets\mflac_v2-map.key" />
+    <EmbeddedResource Include="DataSets\mflac_v2-map.key.enc" />
+    <EmbeddedResource Include="DataSets\mflac-rc4.payload" />
+    <EmbeddedResource Include="DataSets\mflac-rc4.payload.enc" />
+    <EmbeddedResource Include="DataSets\mflac-rc4.key" />
+    <EmbeddedResource Include="DataSets\mflac-rc4.key.enc" />
+    <EmbeddedResource Include="DataSets\mflac-rc4.tail" />
+    <EmbeddedResource Include="DataSets\mflac0-rc4.payload" />
+    <EmbeddedResource Include="DataSets\mflac0-rc4.payload.enc" />
+    <EmbeddedResource Include="DataSets\mflac0-rc4.key" />
+    <EmbeddedResource Include="DataSets\mflac0-rc4.key.enc" />
+    <EmbeddedResource Include="DataSets\mflac0-rc4.tail" />
+    <EmbeddedResource Include="DataSets\mgg-map.payload" />
+    <EmbeddedResource Include="DataSets\mgg-map.payload.enc" />
+    <EmbeddedResource Include="DataSets\mgg-map.key" />
+    <EmbeddedResource Include="DataSets\mgg-map.key.enc" />
+    <EmbeddedResource Include="DataSets\mgg-map.tail" />
+    <EmbeddedResource Include="DataSets\qmc0-static.payload" />
+    <EmbeddedResource Include="DataSets\qmc0-static.payload.enc" />
+    <EmbeddedResource Include="DataSets\qmc0-static.key" />
   </ItemGroup>
 
   <ItemGroup>
